# social-duo

./: README.md  package.json  pyproject.toml
.social-duo/: config.json  history.db
Social-Agents-CLI/social-duo/: README.md  package.json  pyproject.toml
Social-Agents-CLI/social-duo/npm/: install.js  run.js
Social-Agents-CLI/social-duo/social_duo/: main.py
Social-Agents-CLI/social-duo/social_duo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
Social-Agents-CLI/social-duo/social_duo/agents/: editor.py  prompts.py  writer.py
Social-Agents-CLI/social-duo/social_duo/cli/: init_cmd.py  molt_cmd.py
Social-Agents-CLI/social-duo/social_duo/core/: config.py  constraints.py  loop.py  molt_engine.py  render.py
Social-Agents-CLI/social-duo/social_duo/providers/: llm.py
Social-Agents-CLI/social-duo/social_duo/storage/: migrations.py
Social-Agents-CLI/social-duo/social_duo/types/: discuss_schemas.py  schemas.py
Social-Agents-CLI/social-duo/tests/: test_constraints.py  test_discuss.py  test_molt.py  test_storage.py
npm/: install.js  run.js
social_duo.egg-info/: requires.txt
social_duo/agents/: prompts_discuss.py  prompts_molt.py
social_duo/cli/: chat_cmd.py  config_cmd.py  discuss_cmd.py  history_cmd.py  post_cmd.py  reply_cmd.py
social_duo/core/: discuss_loop.py  scoring.py
social_duo/providers/: openai_compat.py
social_duo/storage/: db.py  events.py  history.py
social_duo/types/: molt_schemas.py
tests/: test_loop.py
