[project]
name = "social-duo"
version = "0.1.4"
description = "Two-agent CLI for social media posts and replies"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Your Name"}]

dependencies = [
  "typer>=0.9.0",
  "rich>=13.7.0",
  "pydantic>=2.6.0",
  "httpx>=0.25.0",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0"
]

[project.scripts]
social_duo = "social_duo.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
